Add support for knime 5.1 + replace appveyor/travis with gha/sonarcloud