@@ -17,8 +17,8 @@
         <url>https://github.com/3D-e-Chem/knime-klifs/issues</url>
     </issueManagement>
     <ciManagement>
-        <system>Travis CI</system>
-        <url>http://travis-ci.org/3D-e-Chem/knime-klifs</url>
+        <system>GitHub actions</system>
+        <url>https://github.com/3D-e-Chem/knime-klifs/actions</url>
     </ciManagement>
 
     <prerequisites>
@@ -26,16 +26,35 @@
     </prerequisites>
 
     <properties>
-        <tycho.version>1.4.0</tycho.version>
-        <tycho.extras.version>1.4.0</tycho.extras.version>
+		<tycho.version>2.7.5</tycho.version>
+		<tycho.extras.version>${tycho.version}</tycho.extras.version>
         <tycho.test.platformArgs/>
         <tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
+        <jacoco.version>0.8.10</jacoco.version>
+		<java.version>17</java.version>
+		<maven.compiler.version>3.10.1</maven.compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <target.file>KNIME-AP-4.0</target.file>
+        <knime.version>5.1</knime.version>
+        <target.file>KNIME-AP-${knime.version}</target.file>
         <tycho.scmUrl>scm:git:https://github.com/3D-e-Chem/knime-klifs.git</tycho.scmUrl>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.organization>3d-e-chem</sonar.organization>
+        <!-- following required if running mvn from JDK17 -->
+		<knime.ini.testArgs>--add-opens=java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED
+            --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+            --add-opens=java.base/sun.security.util=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.nio.channels=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.nio=ALL-UNNAMED
+            --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
+            --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+            -Dmisc.io.testing=true</knime.ini.testArgs>
     </properties>
     <build>
         <plugins>
